--- a/src/style.css
+++ b/src/style.css
@@ -1,34 +1,48 @@
-footer {
-    display: flex;
-    border: solid 1px black;
-    background-color: #ffce47;
-}
-
-footer img {
-    width: 200px;
-    height: 200px;
-}
-
-footer div {
-    width: 50%;
-    text-align: center;
-}
-
-.autores {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    text-transform: uppercase;
-}
-
-.autores ul {
-    list-style: none;
-}
-
 * {
     font-family: sans-serif;
 }
+
+body {
+    margin: 0px;
+}
+
+
+/* header */
+
+header {
+    width: 100%;
+    height: 50px;
+}
+
+ul {
+    padding: 0px;
+    align-items: center;
+    display: flex;
+    list-style: none;
+    justify-content: center;
+}
+
+li {
+    margin-right: 100px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.menu img {
+    width: 100%;
+    height: 50px;
+}
+
+
+/* fin header */
+
+
+/* news */
 
 #news div {
     border: solid 1px black;
@@ -77,35 +91,39 @@ footer div {
     text-transform: uppercase;
 }
 
-body {
-    margin: 0px;
-}
 
-header {
-    width: 100%;
-    height: 50px;
-}
+/* fin news */
 
-ul {
-    padding: 0px;
-    align-items: center;
+
+/* footer */
+
+footer {
     display: flex;
-    list-style: none;
-    justify-content: center;
+    border: solid 1px black;
+    background-color: #ffce47;
 }
 
-li {
-    margin-right: 100px;
+footer img {
+    width: 200px;
+    height: 200px;
+}
+
+footer div {
+    width: 50%;
     text-align: center;
+}
+
+.autores {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
     text-transform: uppercase;
 }
 
-a {
-    text-decoration: none;
-    color: black;
+.autores ul {
+    list-style: none;
 }
 
-.menu img {
-    width: 100%;
-    height: 50px;
-}
+
+/* fin footer */
