--- a/src/style.css
+++ b/src/style.css
@@ -46,23 +46,26 @@ a {
 
 #news div {
     border: solid 1px black;
-    display: inline-block;
 }
 
 #news {
-    justify-content: center;
+    min-width: 1200px;
+    width: 100%;
     display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .fila {
-    display: block;
-    width: 100%;
+    display: flex;
+    height: 100%;
+    background-color: #7efff3;
 }
 
 .colm {
-    background-color: #7efff3;
-    width: 49.85%;
-    height: 240px;
+    min-width: 490px;
+    height: 300px;
+    width: 100%;
 }
 
 .colm {
