--- a/src/style.css
+++ b/src/style.css
@@ -1,37 +1,9 @@
-* {
-    font-family: sans-serif;
-}
-
 body {
     margin: 0px;
 }
 
 
 /* header */
-
-header {
-    width: 100%;
-    height: 50px;
-}
-
-header ul {
-    padding: 0px;
-    align-items: center;
-    display: flex;
-    list-style: none;
-    justify-content: center;
-}
-
-header li {
-    margin-right: 100px;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
 
 .menu img {
     width: 100%;
@@ -41,42 +13,36 @@ a {
 
 /* fin header */
 
+
 /* services */
-#services{
-    
+
+#services {
     display: flex;
-    border: solid 1.5px black;
     min-width: 1200px;
     width: 100%;
 }
 
-#services div{
-    background-color: #F59967;
+#services div {
     padding: 10px;
     text-align: center;
-    width: 33%;
-    border: solid 1.5px black;
-
 }
 
-#services img{
-height: 200px;
-display: block;
-margin-left: auto;
-margin-right: auto;
+#services img {
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-#services h3{
+#services h3 {
     text-transform: uppercase;
 }
 
+
 /* fin services */
 
-/* news */
 
-#news div {
-    border: solid 1px black;
-}
+/* news */
 
 #news {
     min-width: 1200px;
@@ -89,7 +55,6 @@ margin-right: auto;
 .fila {
     display: flex;
     height: 100%;
-    background-color: #7efff3;
 }
 
 .colm {
@@ -102,7 +67,6 @@ margin-right: auto;
 }
 
 .colm img {
-    border: solid 1px black;
     width: 200px;
     height: 130px;
     position: initial;
@@ -126,34 +90,32 @@ margin-right: auto;
 
 /* fin news */
 
+
 /* team */
- #team {display: flex;
+
+#team {
+    display: flex;
     min-width: 1200px;
     width: 100%;
-    border: solid 1px black;
 }
 
-#team div{
-    border: solid 1px black;
+#team div {
     width: 50%;
-    background-color: #b7fe66; 
-    }
+}
 
-#team h4{
-    margin-left:15px;
+#team h4 {
+    margin-left: 15px;
     text-align: center;
     text-transform: uppercase;
-
 }
 
-#team img
-{
-width: 200px;
-float: right;
-border: solid 1px black;
-margin: 5px;
-
+#team img {
+    width: 200px;
+    float: right;
+    margin: 5px;
 }
+
+
 /* fin team */
 
 
@@ -161,8 +123,8 @@ margin: 5px;
 
 footer {
     display: flex;
-    border: solid 1px black;
-    background-color: #ffce47;
+    min-width: 1200px;
+    width: 100%;
 }
 
 footer img {
